--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.3",
+    "@use-gesture/react": "^10.3.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
